--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>script-sense-grade-ai</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>ScriptSense Grade AI - Intelligent Answer Sheet Grading System</title>
+    <link rel="icon" type="image/x-icon" href="/icon.ico">
+    <meta name="description" content="Automated answer sheet grading system powered by AI. Fast, accurate, and efficient grading solution for educators. Features include QR code scanning, OCR technology, and intelligent answer analysis." />
+    <meta name="keywords" content="AI grading, automated assessment, education technology, OCR grading, QR code scanning, answer sheet analysis, educational software, teacher tools" />
+    <meta name="author" content="ScriptSense Grade AI" />
 
-    <meta property="og:title" content="script-sense-grade-ai" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="ScriptSense Grade AI - Intelligent Answer Sheet Grading System" />
+    <meta property="og:description" content="Transform your grading process with AI-powered automated answer sheet analysis. Efficient, accurate, and time-saving solution for modern educators." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/card.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/card.png" />
   </head>
 
   <body>
