Fix: Update favicon link type in HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ScriptSense Grade AI - Intelligent Answer Sheet Grading System</title>
-    <link rel="icon" type="image/x-icon" href="/icon.ico">
+    <link rel="icon" type="image/ico" href="/icon.ico" />
+
     <meta name="description" content="Automated answer sheet grading system powered by AI. Fast, accurate, and efficient grading solution for educators. Features include QR code scanning, OCR technology, and intelligent answer analysis." />
     <meta name="keywords" content="AI grading, automated assessment, education technology, OCR grading, QR code scanning, answer sheet analysis, educational software, teacher tools" />
     <meta name="author" content="ScriptSense Grade AI" />
