feat: Enhance HTML metadata and improve NotFound page with user navigation options

--- a/index.html
+++ b/index.html
@@ -3,8 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="ScriptSense Grade AI" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="ScriptSense Grade AI" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="msapplication-TileImage" content="/icon.png" />
+    <meta name="msapplication-config" content="/browserconfig.xml" />
+    <meta name="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="icon" sizes="192x192" href="/icon.png" />
+    <meta name="icon" sizes="512x512" href="/icon.png" />
+    <meta name="icon" sizes="any" href="/icon.png" />
+    <meta name="manifest" href="/manifest.json" />
+    <meta name="description" content="Automated answer sheet grading system powered by AI. Fast, accurate, and efficient grading solution for educators." />
+    <meta name="keywords" content="AI grading, automated assessment, education technology, OCR grading, QR code scanning, answer sheet analysis, educational software, teacher tools" />
+    <meta name="author" content="ScriptSense Grade AI" />
+    <meta name="viewport-fit" content="cover" />
+    
     <title>ScriptSense Grade AI - Intelligent Answer Sheet Grading System</title>
+
     <link rel="icon" type="image/ico" href="/icon.ico" />
+
+    
+    <base href="/" />
 
     <meta name="description" content="Automated answer sheet grading system powered by AI. Fast, accurate, and efficient grading solution for educators. Features include QR code scanning, OCR technology, and intelligent answer analysis." />
     <meta name="keywords" content="AI grading, automated assessment, education technology, OCR grading, QR code scanning, answer sheet analysis, educational software, teacher tools" />
