--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
     <meta property="og:title" content="ScriptSense Grade AI - Intelligent Answer Sheet Grading System" />
     <meta property="og:description" content="Transform your grading process with AI-powered automated answer sheet analysis. Efficient, accurate, and time-saving solution for modern educators." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/card.png" />
+    <meta property="og:image" content="/lovable-uploads/image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://scriptsenseai.netlify.app" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/card.png" />
+    <meta name="twitter:site" content="@InsightEd_ai" />
+    <meta name="twitter:image" content="/lovable-uploads/image.png" />
+    <meta property="twitter:domain" content="scriptsenseai.netlify.app" />
   </head>
 
   <body>
